pod/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-ludo
  labels:
   app: www
   version: '2'
   env: test
spec:
  containers:
  - image: nginx
    name: nginx
