pod/web-ludo_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ludo-ingress
  namespace: ludo
spec:
  rules:
  - host: web-ludo.ludovic.tech
    http:
      paths:
      - backend:
          serviceName: web-ludo-ip
          servicePort: 80
